Change joi to joi-browser

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
-    "joi": "^13.6.0",
+    "joi-browser": "^13.4.0",
     "joi-password-complexity": "^2.0.1",
     "jwt-decode": "^2.2.0",
     "query-string": "^6.1.0",
