--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "joi-password-complexity": "^2.0.1",
     "query-string": "^6.1.0",
     "react": "^16.4.2",
+    "react-beautiful-dnd": "^10.0.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-toastify": "^4.2.0"
+    "react-toastify": "^4.2.0",
+    "styled-components": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
