--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "html-react-parser": "^0.4.7",
     "joi-browser": "^13.4.0",
     "joi-password-complexity": "^2.0.1",
+    "lodash": "^4.17.11",
     "query-string": "^6.1.0",
     "react": "^16.4.2",
     "react-beautiful-dnd": "^10.0.2",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.4.2",
+    "react-markdown": "^4.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-toastify": "^4.2.0",
